--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -15,7 +19,9 @@
         <ul class="header-nav list">
           <li><a class="header-item link" href="./index.html">Студія</a></li>
           <li>
-            <a class="header-item link" href="./portfolio.html">Портфоліо</a>
+            <a class="header-item-now link" href="./portfolio.html"
+              >Портфоліо</a
+            >
           </li>
           <li><a class="header-item link" href="">Контакти</a></li>
         </ul>
@@ -43,53 +49,105 @@
           <li><button class="menu-button" type="button">Дизайн</button></li>
           <li><button class="menu-button" type="button">Маркетинг</button></li>
         </ul>
-      </section>
-      <section class="work">
         <ul class="list">
           <li>
-            <img src="./images/img1-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Технокряк</h3>
-            <p class="work-text">Веб-сайт</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img1-portfolio.jpg"
+                alt=" Веб-сайт 'Технокряк' "
+                width="370"
+              />
+              <h3 class="work-title">Технокряк</h3>
+              <p class="work-text">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="./images/img2-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Постер New Orlean vs Golden Star</h3>
-            <p class="work-text">Дизайн</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img2-portfolio.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+              />
+              <h3 class="work-title">Постер New Orlean vs Golden Star</h3>
+              <p class="work-text">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="./images/img3-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Ресторан Seafood</h3>
-            <p class="work-text">Додаток</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img3-portfolio.jpg"
+                alt="Додаток для ресторану"
+                width="370"
+              />
+              <h3 class="work-title">Ресторан Seafood</h3>
+              <p class="work-text">Додаток</p></a
+            >
           </li>
           <li>
-            <img src="./images/img4-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Проєкт Prime</h3>
-            <p class="work-text">Маркетинг</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img4-portfolio.jpg"
+                alt="Маркетинговий проєкт"
+                width="370"
+              />
+              <h3 class="work-title">Проєкт Prime</h3>
+              <p class="work-text">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img src="./images/img5-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Проєкт Boxes</h3>
-            <p class="work-text">Додаток</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img5-portfolio.jpg"
+                alt="Додаток для проєкту"
+                width="370"
+              />
+              <h3 class="work-title">Проєкт Boxes</h3>
+              <p class="work-text">Додаток</p></a
+            >
           </li>
           <li>
-            <img src="./images/img6-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Inspiration has no Borders</h3>
-            <p class="work-text">Веб-сайт</p>
+            <a class="menu-link link" href="">
+              <img
+                src="./images/img6-portfolio.jpg"
+                alt="Веб-сайт для Inspiration has no Borders"
+                width="370"
+              />
+              <h3 class="work-title">Inspiration has no Borders</h3>
+              <p class="work-text">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="./images/img7-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Видання Limited Edition</h3>
-            <p class="work-text">Дизайн</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img7-portfolio.jpg"
+                alt="Дизайн видання Limited Edition"
+                width="370"
+              />
+              <h3 class="work-title">Видання Limited Edition</h3>
+              <p class="work-text">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="./images/img8-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Проєкт LAB</h3>
-            <p class="work-text">Маркетинг</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img8-portfolio.jpg"
+                alt="Маркетинговий проєкт"
+                width="370"
+              />
+              <h3 class="work-title">Проєкт LAB</h3>
+              <p class="work-text">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img src="./images/img9-portfolio.jpg" alt="" width="370" />
-            <h3 class="work-title">Growing Business</h3>
-            <p class="work-text">Додаток</p>
+            <a class="menu-link link" href=""
+              ><img
+                src="./images/img9-portfolio.jpg"
+                alt="Додаток для Growing Business"
+                width="370"
+              />
+              <h3 class="work-title">Growing Business</h3>
+              <p class="work-text">Додаток</p></a
+            >
           </li>
         </ul>
       </section>
