--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           ><span class="web">Web</span>Studio</a
         >
         <ul class="header-nav list">
-          <li><a class="header-item link" href="./index.html">Студія</a></li>
+          <li><a class="header-item-now link" href="./index.html">Студія</a></li>
           <li>
             <a class="header-item link" href="./portfolio.html">Портфоліо</a>
           </li>
